# btbraille

./: .gitmodules
dbb-projects/rtos_braille/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  CopyOfCMakeCache.txt  Makefile  braille.c  braille.h  cmake_install.cmake  compile_commands.json  rtos_braille.c  rtos_braille.dis  rtos_braille.elf  rtos_braille.elf.map  rtos_braille.h  rtos_braille.uf2  spi_braille.c  xcmake_install.cmake
dbb-projects/rtos_braille/FREERTOS_KERNEL/: Makefile
dbb-projects/rtos_braille/pico-sdk/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/docs/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/common/boot_picobin_headers/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/boot_picoboot_headers/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/boot_uf2_headers/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/common/pico_base_headers/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/pico_binary_info/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/pico_bit_ops_headers/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/common/pico_sync/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/common/pico_util/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
dbb-projects/rtos_braille/pico-sdk/src/rp2040/hardware_regs/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2040/hardware_structs/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2040/pico_platform/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/cmsis/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_base/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_flash/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_pio/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_pll/: Makefile
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
dbb-projects/rtos_braille/pico-sdk/src/rp2_common/hardware_resets/: Makefile  (+1 more)
dbb-projects/rtos_braille/pico-sdk/tools/: Makefile  cmake_install.cmake
(+297 files in other folders)
